--- a/templates/wb_form.html
+++ b/templates/wb_form.html
@@ -1,27 +1,27 @@
-<form class="w-full lg:max-w-md lg:mr-8 mb-8 lg:mb-0" hx-get="/" hx-swap="outerHTML">
-    <div class="mb-4"> <label for="callsign" class="block text-gray-700 font-bold mb-2">Vliegtuig:</label>
+<form class="w-full mb-2" hx-get="/" hx-swap="outerHTML">
+    <div class="mb-4"> <label for="callsign" class="uppercase block text-gray-700 font-bold mb-2">Vliegtuig</label>
         <select id="callsign" name="callsign" class="custom-select shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline cursor-pointer" required>
             <option value="PHDHA" {% if callsign is defined and callsign == "PHDHA" %}selected{% endif %}>PHDHA</option>
             <option value="PHDHB" {% if callsign is defined and callsign == "PHDHB" %}selected{% endif %}>PHDHB</option>
         </select>
     </div>            
     <div class="mb-4">
-        <label for="piloot-gewicht" class="block text-gray-700 font-bold mb-2">Piloot (kg):</label>
+        <label for="piloot-gewicht" class="uppercase block text-gray-700 font-bold mb-2">Piloot (kg)</label>
         <input type="number" min="0" id="piloot-gewicht" {% if pilot %}value="{{ pilot }}"{% endif %} name="pilot" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
     </div>
 
     <div class="mb-4">
-        <label for="passagier-gewicht" class="block text-gray-700 font-bold mb-2">Passagier (kg):</label>
+        <label for="passagier-gewicht" class="uppercase block text-gray-700 font-bold mb-2">Passagier (kg)</label>
         <input type="number" min="0" id="passagier-gewicht" {% if passenger %}value="{{ passenger }}"{% endif %} name="passenger" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
     </div>
 
     <div class="mb-4">
-        <label for="bagage-gewicht" class="block text-gray-700 font-bold mb-2">Bagage (kg):</label>
+        <label for="bagage-gewicht" class="uppercase block text-gray-700 font-bold mb-2">Bagage (kg)</label>
         <input type="number" min="0" max="40" id="bagage-gewicht" {% if baggage %}value="{{ baggage }}"{% endif %} name="bagage" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
     </div>
 
     <div class="mb-4" >
-        <label for="brandstof-gewicht" class="block text-gray-700 font-bold mb-2">Brandstof:</label>
+        <label for="brandstof-gewicht" class="uppercase block text-gray-700 font-bold mb-2">Brandstof</label>
         <div class="flex items-center mb-2">
             <input type="checkbox" id="auto-calculate" {% if fuel_option is defined and fuel_option == "auto" %}checked="checked"{% endif %} name="fuel_option" value="auto" class="form-checkbox h-5 w-5 text-gray-600" hx-get="/fuel-option" hx-include="[name='fuel_option'],[name='fuel_type'],[name='fuel_quantity_type'],[name='fuel_quantity']" hx-trigger="change" hx-target="#fuel-option">
             <label for="auto-calculate" class="ml-2 block text-gray-700 font-bold">Automatisch Berekenen</label>
@@ -29,12 +29,71 @@
         {% include "wb_form_fuel_option.html" %}
     </div>
     <div class="flex items-center justify-between">
-        <input type="submit" value="Bereken Gewicht en Balans" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+        <input type="submit" value="Bereken Gewicht en Balans" class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
     </div>
 </form>
 {% if show_image %}
 <div hx-swap-oob="true" id="wb-image-container" class="w-full lg:w-full flex flex-col items-center justify-center">
     <img src="{{ wb_chart_image_url | safe }}" alt="Chart" class="w-100 h-100 lg:w-100 lg:h-100 mb-2">
-    <img src="{{ wb_table_image_url | safe }}" alt="Table" class="w-100 h-100 lg:w-100 lg:h-100 mb-2">
+    {% if wb_table is defined %}
+    <table class="border border-gray min-w-full divide-y divide-gray-200">
+        {% for row in wb_table %}
+            {% if loop.first %}
+                <thead class="bg-gray-200"><tr>
+                {% for item in row %}
+                {% if loop.index0 == 1 %}
+                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider hidden md:block">{{ item }}</th>
+                {% else %}
+                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">{{ item }}</th>
+                {% endif %}
+                {% endfor %}
+            {% elif loop.last %}
+                <tfoot class="bg-gray-200"><tr>
+                {% for item in row %}
+                {% if loop.first %}
+                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">{{ item }}</th>
+                {% else %}
+                    {% if loop.index0 == 1 %}
+                        <th class="px-6 py-3 text-xs font-medium text-gray-900 uppercase tracking-wider text-right hidden md:block">{{ item }}</th>
+                    {% else %}
+                        <th class="px-6 py-3 text-xs font-medium text-gray-900 uppercase tracking-wider text-right">{{ item }}</th>
+                    {% endif %}
+                {% endif %}
+                {% endfor %}
+            {% else %}
+                {% if loop.index % 2 == 0%}
+                <tr class="table-row"> 
+                {% else %}
+                <tr class="table-row bg-gray-50"> 
+                {% endif %}
+                {% for item in row %}
+                    {% if loop.first %}
+                        <td class="px-6 py-4 whitespace-nowrap text-xs font-medium text-gray-900">{{ item }}</td>
+                    {% else %}
+                        {% if loop.index0 == 1 %}
+                            <td class="px-6 py-4 whitespace-nowrap text-xs font-medium text-gray-900 text-right hidden md:block">{{ item }}</td>
+                        {% else %}
+                            <td class="px-6 py-4 whitespace-nowrap text-xs font-medium text-gray-900 text-right">{{ item }}</td>
+                        {% endif %}
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+
+
+            {% if loop.first %}
+                </tr></thead>
+            {% elif loop.last %}
+                </tr><tfoot>
+            {% else %}
+                </tr> 
+            {% endif %}
+        {% endfor %}
+        </table>
+        <div class="mt-4 md:hidden p-4 bg-blue-100 border-l-4 border-blue-500 text-blue-700">
+            <p class="text-sm">
+                Sommige gegevens zijn verborgen vanwege beperkte ruimte. Draai uw apparaat naar landschapsmodus om alle informatie te bekijken.
+            </p>
+        </div>
+    {% endif %}
 </div>
 {% endif %}
