feat: weight and balance export to PDF

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,15 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
+        @media print {
+            .no-print {
+              display: none !important;
+            }
+            body {
+              margin: 20mm;
+              font-size: 12pt;
+            }
+          }
         .custom-select {
             appearance: none;
             background-color: #fff;
@@ -40,14 +49,14 @@
         </div>
     </div>
     <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-<script>
-  kofiWidgetOverlay.draw('michaelvlaar', {
-    'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Donate',
-    'floating-chat.donateButton.background-color': '#00b9fe',
-    'floating-chat.donateButton.text-color': '#fff'
-  });
-</script>
+    <script>
+      kofiWidgetOverlay.draw('michaelvlaar', {
+        'type': 'floating-chat',
+        'floating-chat.donateButton.text': 'Donate',
+        'floating-chat.donateButton.background-color': '#00b9fe',
+        'floating-chat.donateButton.text-color': '#fff'
+      });
+    </script>
 </body>
 </html>
 
