--- a/templates/print.html
+++ b/templates/print.html
@@ -58,6 +58,7 @@
         });
         document.getElementById('date-time').textContent = `${formattedDate} ${formattedTime}`;
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 </body>
 </html>
 
