feat: take-off performance added

--- a/templates/print.html
+++ b/templates/print.html
@@ -43,6 +43,8 @@
     <img src="{{ wb_chart_image_url | safe }}" alt="Chart" class="w-100 h-100 lg:w-100 lg:h-100 mb-2">
     {% include "wb_table.html" %}
 
+    <img src="{{ perf_chart_tod_image_url | safe }}" alt="Chart" class="w-100 h-100 lg:w-100 lg:h-100 mb-2">
+
     <script>
         // Voeg de datum en tijd toe
         const now = new Date();
