--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             background-repeat: no-repeat;
             background-position: right 0.5rem center;
             background-size: 1.5rem;
-        },
+        }
         .vertical-center {
             display: flex;
             align-items: center;
@@ -40,7 +40,7 @@
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="mb-20 bg-white p-8 rounded shadow-md flex flex-col items-center lg:items-stretch">
         <div class="text-center mb-8">
-            <h1 class="text-2xl font-bold">Gewicht en Balans Aquila A210</h1>
+            <h1 class="text-2xl font-bold">Berekeningen Aquila A210</h1>
         </div>
         <div class="flex flex-col lg:items-stretch w-full">
             {% include "wb_form.html" %}
