--- a/templates/print.html
+++ b/templates/print.html
@@ -2,13 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Gewicht en Balans Aquila A210</title>
+    <title>Berekeningen Aquila A210</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
             body {
                 margin: 10mm;
-                font-size: 12pt;
+                font-size: 7pt;
             }
             .no-print {
                 display: none !important;
@@ -40,10 +40,17 @@
 <body>
     <h1 id="reference-title" class="text-2xl font-bold text-gray-700 mb-1">{{ document_reference }}</h1>
     <p id="date-time" class="mb-6 text-gray-700"></p>
-    <img src="{{ wb_chart_image_url | safe }}" alt="Chart" class="w-100 h-100 lg:w-100 lg:h-100 mb-2">
-    {% include "wb_table.html" %}
-
+    <img src="{{ wb_chart_image_url | safe }}" alt="Chart" class="w-90 h-90 mb-2">
+        <div class="flex">
+            <div class="mr-2">
+            {% include "wb_table.html" %}
+            </div>
+            <div>
+            {% include "performance_table.html" %}
+            </div>
+        </div>
     <img src="{{ perf_chart_tod_image_url | safe }}" alt="Chart" class="w-100 h-100 lg:w-100 lg:h-100 mb-2">
+    <img src="{{ perf_chart_ldr_image_url | safe }}" alt="Chart" class="w-100 h-100 lg:w-100 lg:h-100 mb-2">
 
     <script>
         // Voeg de datum en tijd toe
