--- a/templates/index.html
+++ b/templates/index.html
@@ -35,29 +35,35 @@
             background-color: #f0f0f0;
             cursor: pointer;
         }
+
+        #callsign-phdha:checked ~ div {
+          --tw-translate-x: 0%;
+        }
+
+        #callsign-phdhb:checked ~ div {
+          --tw-translate-x: 100%;
+        }
     </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="mb-20 bg-white p-8 rounded shadow-md flex flex-col items-center lg:items-stretch">
-        <div class="text-center mb-8">
-            <h1 class="text-2xl font-bold">Berekeningen Aquila A210</h1>
-        </div>
-        <div class="flex flex-col lg:items-stretch w-full">
-            {% include "wb_form.html" %}
-            <div id="wb-image-container" class="flex-grow flex items-center justify-center">
-                <p class="text-center text-gray-700 text-lg font-semibold max-w-lg"> Vul het formulier in en klik op "Bereken Gewicht en Balans" om het gewicht en balans te visualiseren.</p>
+<body class="bg-white">
+    <header class="bg-indigo-600 text-white fixed w-full top-0 z-50">
+        <div class="max-w-7xl mx-auto px-2">
+            <div class="flex justify-between h-16">
+                <div class="flex">
+                    <div class="ml-2 flex items-center">
+                        <span class="text-lg font-semibold uppercase">&#128747; Berekeningen Aquila A210</span>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-    <script>
-      kofiWidgetOverlay.draw('michaelvlaar', {
-        'type': 'floating-chat',
-        'floating-chat.donateButton.text': 'Donate',
-        'floating-chat.donateButton.background-color': '#00b9fe',
-        'floating-chat.donateButton.text-color': '#fff'
-      });
-    </script>
+    </header>
+    <main class="max-w-7xl mx-auto mt-16 p-4">
+        <div class="flex flex-col lg:items-stretch w-full" id="#main">
+                {% include "stepper.html" %}
+                {% include "wb_form.html" %}
+        </div>
+    </main>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </body>
 </html>
 
