--- a/templates/performance_table.html
+++ b/templates/performance_table.html
@@ -3,7 +3,7 @@
     <thead class="bg-gray-200">
         <tr>
             <th class="px-6 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Name</th>
-            <th class="px-6 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Distance [m]</th>
+            <th class="px-6 py-3 text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Distance [m]</th>
         </tr>
     </thead>
     <tbody>
